Fix: #3,#84 Improve keyboard shortcuts management in the browser Itis annoying to have to hit Shift Tab to exit an input field and start using the keyboard again. See if there is a way to focus on the browser when hitting Escape or just Tab to get out of the input field and start using j and k immediately.. Also fixed an issue with the short mode panel width and the browser not disappearing properly when hitting Esc.

--- a/trunk/skins/common/musicco.css
+++ b/trunk/skins/common/musicco.css
@@ -860,7 +860,7 @@
 	}
 
 	#big-player {
-		left: 50%;
+		left: 51%;
 	}
 
 	#playlistPanel {
